--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 		<div class="span_9 col">
 			<nav>
 				<ul>
-					<li><a href=""></a></li>
-					<li><a href=""></a></li>
-					<li><a href=""></a></li>
+					<li><a href="">1</a></li>
+					<li><a href="">2</a></li>
+					<li><a href="">3</a></li>
 				</ul>
 
 
