--- a/index.html
+++ b/index.html
@@ -18,18 +18,19 @@
 		<div class="row">
 
 		<div class="span_3 col">
-			<h1>Website</h1>
+			<img class="logo" src="img/logo.png">
+			<h3>bryan wells</h3>
 		</div>
 		<div class="span_9 col">
+
 			<nav>
-				<ul>
-					<li><a href="">1</a></li>
-					<li><a href="">2</a></li>
-					<li><a href="">3</a></li>
-				</ul>
-
-
-			</nav>	
+			  <ul>
+			    <li><a href="#">About</a></li>
+			    <li><a href="#">Services</a></li>
+			    <li><a href="#">Blog</a></li>
+			    <li><a href="#">Contact</a></li>
+			  </ul>
+			</nav>
 		</div>
 		</div>
 		
