--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 		<div class="span_3 col">
 			<img class="logo" src="img/logo.png">
-			<h3>bryan wells</h3>
+	
 		</div>
 		<div class="span_9 col">
 
@@ -33,6 +33,41 @@
 			</nav>
 		</div>
 		</div>
+
+		<div class="span_12 col">
+			<div class="port">
+		
+			<a class="lightbox" href="#one">
+			  <img src="img/labelbig.png">
+			</a> 
+			<div class="lightbox-target" id="one">
+			   <img src="img/labelbig.png">
+			   <a class="lightbox-close" href="#"></a>
+			</div>
+			<a class="lightbox" href="#two">
+			  <img src="img/mag.jpg">
+			</a> 
+			<div class="lightbox-target" id="two">
+				<img src="img/mag.jpg">
+			   <a class="lightbox-close" href="#"></a>
+			</div>
+			<a class="lightbox" href="#three">
+			  <img src="img/moon.jpg">
+			</a> 
+			<div class="lightbox-target" id="three">
+			   <img src="img/moon.jpg">
+			   <a class="lightbox-close" href="#"></a>
+			</div>
+		</div>
+
+		<!-- Clearfix -->
+		<div class="clear"></div>
+
+	</div>
+	
+  
+
+</html>
 		
 		<div class="row">
 			<article class="span_6 col">
