--- a/index.html
+++ b/index.html
@@ -99,7 +99,9 @@
 				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 			</footer>
-
+			<div class="span_12 col">
+				<p>Bryan Wells Copyright 2014</p>
+			</div>
 		</div>
 
 
