--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
 		<div class="row">
 
 		<div class="span_3 col">
-			<img class="logo" src="img/logo.png">
+			<a href="link home"><img class="logo" src="img/logo.png"></a>
 	
 		</div>
 		<div class="span_9 col">
 
 			<nav>
 			  <ul>
+			    <li><a href="#">Home</a></li>
 			    <li><a href="#">About</a></li>
-			    <li><a href="#">Services</a></li>
-			    <li><a href="#">Blog</a></li>
-			    <li><a href="#">Contact</a></li>
+			    <li><a href="#">Portfolio</a></li>
+			    <li><a href="#">Resume</a></li>
 			  </ul>
 			</nav>
 		</div>
@@ -56,6 +56,13 @@
 			</a> 
 			<div class="lightbox-target" id="three">
 			   <img src="img/moon.jpg">
+			   <a class="lightbox-close" href="#"></a>
+			</div>
+			<a class="lightbox" href="#four">
+			  <img src="img/movie.jpg">
+			</a> 
+			<div class="lightbox-target" id="four">
+			   <img src="img/movie.jpg">
 			   <a class="lightbox-close" href="#"></a>
 			</div>
 		</div>
@@ -100,7 +107,7 @@
 				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 			</footer>
 			<div class="span_12 col">
-				<p>Bryan Wells Copyright 2014</p>
+				<p>Bryan Wells Copyright &#169; 2014</p>
 			</div>
 		</div>
 
