--- a/index.html
+++ b/index.html
@@ -79,23 +79,13 @@
 		
 		<div class="row">
 			<article class="span_6 col">
-				<h3>hello</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				<h3>Works</h3>
+				<p>The work I have on the site so far is stuff that I have designed in classes like Visual Communication Design 1, and typography. The first two are a wine label logo I designed called Flying Hills Wine Cellars. The second one being a magazine ad that was part of the brand identity we created for our product. The third piece is a info graphic I created in typograpghy about the moon. This piece showed how important it is to know scaling fonts from screen to print. The graphic was 20x30 inches in size. The fourth piece was one of my first things I designed at Eastern Washington University. It was a movie poster that I created for a made up movie with some of my favorite actors. </p>
 			</article>
 
 			<article class="span_6 col">
-				<h3>what</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				<h3>Future</h3>
+				<p>I am currently enrolled in 3 design classes that I expect to start creating many different pieces that I will add to my portfolio. When I first started the Visual Communication and Design program one of my teachers told me that some of the first things we design may not look as appealing to us later in our careers as designers, and we might shuffle through some of our pieces when creating a portfolio. I am happy with all the work I have done so far and look forward to sharpening my design skills and creating more creative and appealing designs.</p>
 			</article>
 
 		</div>
