--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <title>Bryan wells</title>
+  <link rel="icon" type="image/png" href="img/favicon.png"/>
 	
- <link rel="icon" href="favicon.ico">	
+
  
   <link rel="stylesheet" href="css/normalize.css">
   	<link rel="stylesheet" href="css/gridpak.css">
