--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 
 			<nav>
 			  <ul>
-			    <li><a href="#">Home</a></li>
-			    <li><a href="#">About</a></li>
+			    <li><a href="http://bwells6.github.io">Home</a></li>
+			    <li><a href="http://bwells6.github.io/p1-bio">About</a></li>
 			    <li><a href="#">Portfolio</a></li>
-			    <li><a href="#">Resume</a></li>
+			    <li><a href="http://bwells6.github.io/p2-resume">Resume</a></li>
 			  </ul>
 			</nav>
 		</div>
