--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
 			<article class="span_6 col">
 				<h3>Future</h3>
 				<p>I am currently enrolled in 3 design classes that I expect to start creating many different pieces that I will add to my portfolio. When I first started the Visual Communication and Design program one of my teachers told me that some of the first things we design may not look as appealing to us later in our careers as designers, and we might shuffle through some of our pieces when creating a portfolio. I am happy with all the work I have done so far and look forward to sharpening my design skills and creating more creative and appealing designs.</p>
+				<p><a href="http://ewu.edu">Contact Me: bwells@eagles.ewu.edu</a></p> 
 			</article>
 
 		</div>
